Thêm chức năng cron job database, chỉnh sửa logic đặt phòng khách sạn